this project 40% done

--- a/index.html
+++ b/index.html
@@ -1,28 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+    <!-- fontfamily -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Open+Sans:ital@0;1&family=Poppins&family=Work+Sans:wght@700&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Open+Sans:ital@0;1&family=Poppins&family=Work+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@700&family=Open+Sans:ital@0;1&family=Poppins&family=Work+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap"
+        rel="stylesheet">
+        <!-- font family end -->
+        <!-- icon tag -->
+        <script src="https://kit.fontawesome.com/0cf80d54b4.js" crossorigin="anonymous"></script>
+        <!-- icon tag -->
     <title>Testing my patience with this assignment</title>
 </head>
+
 <body>
     <header class="banner">
-        <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
-        <p class="banner-sub-title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
-        <button class="contact-btn">Contact Us</button>
+        <div class="banner-header">
+            <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+            <p class="banner-sub-title">There are many variations of passages of Lorem Ipsum available, but the majority
+                have suffered alteration in some form, by injected humour, or randomised words</p>
+            <button class="contact-btn">Contact Us</button>
+        </div>
     </header>
 
     <main>
-
+        <section class="about">
+            <div class="black-women">
+                <img src="./images/person.png" alt="back woman">
+            </div>
+            <div class="failures">
+                <h2 class="failures-title">My failures of previous year</h2>
+                <p class="failures-sub-title">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <p class="failures-description"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</p>
+                <p  class="failures-description"><i class="fa-solid fa-check"></i>Contrary to popular belief.</p>
+                <p class="failures-description"><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</p>
+                <p class="failures-description"><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</p>
+                <p class="failures-description"><i class="fa-solid fa-check"></i>Contrary to popular simply.</p>
+            </div>
+        </section>
     </main>
 
-    <article>
-
+    <article class="my-plans">
+        <h1>My Plans</h1>
     </article>
 
     <footer>
 
     </footer>
 </body>
+
 </html>
