--- a/index.html
+++ b/index.html
@@ -56,7 +56,29 @@
     </main>
 
     <article class="my-plans">
-        <h1>My Plans</h1>
+        <h4>My Plans</h4>
+    </article>
+    <article class="skills">
+        <div class="skill">
+            <img src="./images/icons/web.png" alt="web">
+            <p class="skill-titile">Web Development</p>
+            <p class="skill-sub-title">I want to start</p>
+        </div>
+        <div class="skill">
+            <img src="./images/icons/js.png" alt="web">
+            <p class="skill-titile">Javascript</p>
+            <p class="skill-sub-title">I want to learn</p>
+        </div>
+        <div class="skill">
+            <img src="./images/icons/smoke.png" alt="web">
+            <p class="skill-titile">Smoking Habit</p>
+            <p class="skill-sub-title">I want to end</p>
+        </div>
+        <div class="skill">
+            <img src="./images/icons/ecom.png" alt="web">
+            <p class="skill-titile">E-commerce</p>
+            <p class="skill-sub-title">I want to develop</p>
+        </div>
     </article>
 
     <footer>
