90% done but 3-5think can't complete

--- a/index.html
+++ b/index.html
@@ -61,28 +61,49 @@
     <article class="skills">
         <div class="skill">
             <img src="./images/icons/web.png" alt="web">
-            <p class="skill-titile">Web Development</p>
+            <p class="skill-title">Web Development</p>
             <p class="skill-sub-title">I want to start</p>
         </div>
         <div class="skill">
             <img src="./images/icons/js.png" alt="web">
-            <p class="skill-titile">Javascript</p>
+            <p class="skill-title">Javascript</p>
             <p class="skill-sub-title">I want to learn</p>
         </div>
         <div class="skill">
             <img src="./images/icons/smoke.png" alt="web">
-            <p class="skill-titile">Smoking Habit</p>
+            <p class="skill-title">Smoking Habit</p>
             <p class="skill-sub-title">I want to end</p>
         </div>
         <div class="skill">
             <img src="./images/icons/ecom.png" alt="web">
-            <p class="skill-titile">E-commerce</p>
+            <p class="skill-title">E-commerce</p>
             <p class="skill-sub-title">I want to develop</p>
         </div>
     </article>
+    <article class="watch">
+        <h5 class="watch-title">Awlays keep a positive mindset</h5>
+        <button class="call-btn">Call Now</button>
+    </article>
 
-    <footer>
-
+    <footer class="background-black">
+        <div class="black">
+            <h3 class="black-title">Future</h3>
+            <p class="black-sub-title">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="email">Email : info@gmail.com</p>
+            <p class="phone">Phone : 01500 00 00 00</p>
+            <p class="img">
+                <img src="./images/icons/fb.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
+                <img src="./images/icons/youtube.png" alt="">
+            </p>
+        </div>
+        <div class="subcribe">
+            <h5 class="subcribe-title">Subscribe</h5>
+            <form class="forms" action="">
+                <input type="email" placeholder="Enter your email">
+            </form>
+            <div class="subcribe-btn">Subscribe</div>
+        </div>
     </footer>
 </body>
 
